--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,16 @@
     @apply p-2 text-white;
 }
 
+.navButton-basic-b {
+    @apply hover:text-zinc-600 flex flex-col items-center gap-1 text-[14px] hover:bg-zinc-100 p-2 border border-white hover:border-zinc-200 w-full;
+}
+
+.navButton-advanced-b {
+    @apply hover:text-zinc-200 text-zinc-100 flex flex-col items-center gap-1 text-[14px] hover:bg-zinc-700/30 p-2
+        transition-all ease-in-out duration-200 w-full py-4
+    ;
+}
+
 ::-webkit-scrollbar {
     width: 5px;
     height: 4px;
